# nixpkgs-tracker-bot

./: .env.template  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  treefmt.nix
.github/: dependabot.yml
.github/workflows/: autobot.yaml  ci.yaml  clippy.yaml  docker.yaml  update-flake.yaml
crates/bot/: Cargo.toml
crates/bot-client/: Cargo.toml
crates/bot-client/src/: handler.rs  lib.rs
crates/bot-client/src/commands/: mod.rs  ping.rs  track.rs
crates/bot-client/src/jobs/: mod.rs  repo.rs
crates/bot-commands/: Cargo.toml
crates/bot-commands/src/: about.rs  lib.rs  ping.rs  track.rs
crates/bot-config/: Cargo.toml
crates/bot-config/src/: lib.rs
crates/bot-consts/: Cargo.toml
crates/bot-consts/src/: lib.rs
crates/bot-error/: Cargo.toml
crates/bot-http/: Cargo.toml
crates/bot-http/src/: github.rs  lib.rs  model.rs  teawie.rs
crates/bot-jobs/: Cargo.toml
crates/bot-jobs/src/: lib.rs  repo.rs
crates/bot/src/: main.rs
crates/client-http/: Cargo.toml
crates/client-http/src/: github.rs  lib.rs  teawie.rs
crates/discord-bot/: Cargo.toml
crates/discord-bot/src/: config.rs  consts.rs  handler.rs  jobs.rs  lib.rs  main.rs  model.rs
crates/discord-bot/src/commands/: about.rs  ping.rs  track.rs
crates/discord-bot/src/http/: github.rs  mod.rs  teawie.rs
crates/discord-bot/src/jobs/: mod.rs  repo.rs
crates/git-tracker/: Cargo.toml
crates/git-tracker/src/: lib.rs  managed_repository.rs  tracker.rs
crates/nixpkgs-tracker-http/: Cargo.toml
crates/nixpkgs-tracker-http/src/: github.rs  model.rs  teawie.rs
nix/: containerize.nix  module.nix  package.nix  static.nix
src/: client.rs  main.rs
src/command/: mod.rs  ping.rs  track.rs
src/handler/: mod.rs
src/http/: github.rs  mod.rs
