[workspace]
resolver = "2"
members = [
	"crates/discord-bot",
	"crates/git-tracker"
]

[workspace.package]
version = "0.2.0"
authors = ["seth <getchoo at tuta dot io>"]
edition = "2021"
repository = "https://github.com/getchoo/nixpkgs-tracker-bot"
license = "MIT"

[workspace.dependencies]
git-tracker = { path = "./crates/git-tracker" }

git2 = { version = "0.18.3", default-features = false }
log = "0.4.22"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "deny"
