[package]
name = "nixpkgs-tracker-bot"
version = "0.2.0"
edition = "2021"

authors = ["seth <getchoo at tuta dot io>"]
description = "A small Discord app that helps you track where nixpkgs PRs have reached"
repository = "https://github.com/getchoo/nixpkgs-tracker-bot"

[dependencies]
bot-error = { workspace = true }
bot-client = { workspace = true }
dotenvy = "0.15.7"
env_logger = "0.11.3"
tokio = { workspace = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "deny"
