[package]
name = "nixpkgs-tracker-bot"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A small Discord app that helps you track where nixpkgs PRs have reached"
repository.workspace = true
license.workspace = true

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.5"
eyre = "0.6.12"
git2 = { workspace = true, features = ["https"] }
git-tracker.workspace = true
log.workspace = true
reqwest = { version = "0.12.5", default-features = false, features = [
	"charset",
	"http2",
	"rustls-tls",
	"json"
] }
serde = { version = "1.0.204", features = ["derive"] }
serenity = { version = "0.12.2", features = ["unstable_discord_api"] }
tokio = { version = "1.39.2", features = [
	"macros",
	"rt-multi-thread",
	"signal"
] }

[lints]
workspace = true
