[package]
name = "discord-bot"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Small Discord app that helps you track where nixpkgs PRs have reached"
repository.workspace = true
license.workspace = true

publish = false

[[bin]]
name = "nixpkgs-tracker-bot"
path = "src/main.rs"

[dependencies]
dotenvy = "0.15"
env_logger = "0.11"
eyre = "0.6"
git-tracker.workspace = true
log.workspace = true
nixpkgs-tracker-http.workspace = true
serenity = { version = "0.12", features = ["unstable_discord_api"] }
tokio = { version = "1.41", features = [
	"macros",
	"rt-multi-thread",
	"signal"
] }

[lints]
workspace = true
