[package]
name = "git-tracker"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "A library that helps you track commits and branches in a Git repository"
repository.workspace = true
publish = false

[dependencies]
git2 = { workspace = true }
log = { workspace = true }
thiserror = "1.0.63"

[lints]
workspace = true
