[package]
name = "git-tracker"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Library that helps you track commits and branches in a Git repository"
repository.workspace = true

publish = false

[dependencies]
git2 = { version = "0.19.0", default-features = false, features = ["https"] }
log.workspace = true
thiserror = "1.0.64"

[lints]
workspace = true
